--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-matplotlib==3.5.1
-numpy==1.22.0
-scikit_learn==1.1.3
-scipy==1.7.3
-torch==2.0.1+cu118
-torchaudio==2.0.2+cu118
-torchvision==0.15.2+cu118
+einops==0.7.0
+matplotlib==3.4.3
+numpy==1.22.4
+Pillow==8.4.0
+Pillow==10.1.0
+scikit_learn==1.1.1
+scipy==1.8.0
+torch==1.8.1
+torchaudio==0.8.1
+torchvision==0.9.1
